--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -84,6 +84,7 @@
   position: absolute;
   top: 65px;
   left: 0;
+  z-index: 1;
 
   @media (min-width: @tablet-width) {
     width: 440px;
@@ -91,6 +92,7 @@
     margin-top: 8px;
 
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
   }
 
