--- a/source/less/blocks/job.less
+++ b/source/less/blocks/job.less
@@ -54,7 +54,7 @@
   color: @text-color-submain;
 
   @media (min-width: @tablet-width) {
-    height: 280px;
+    min-height: 280px;
     padding: 0;
     padding-top: 151px;
     font-size: 16px;
