--- a/source/less/blocks/copiright.less
+++ b/source/less/blocks/copiright.less
@@ -15,6 +15,8 @@
   text-decoration: none;
   color: @text-color-submain;
 
+  max-width: 113px;
+
   @media (min-width: @tablet-width) {
     padding: 9px 0;
   }
