--- a/source/less/blocks/expenses.less
+++ b/source/less/blocks/expenses.less
@@ -1,6 +1,7 @@
 .expenses {
+  display: flex;
+
   @media (min-width: @tablet-width) {
-    display: flex;
     flex-direction: column;
     align-items: flex-end;
     gap: 9px;
@@ -19,4 +20,5 @@
   .font-submain;
   line-height: 20px;
   text-transform: uppercase;
+  max-width: 200px;
 }
