--- a/source/less/blocks/products.less
+++ b/source/less/blocks/products.less
@@ -155,10 +155,11 @@
 
   grid-column: 1/3;
   border: none;
-  padding: 10px 0 10px 0;
+  padding: 10px 5px;
 
   @media (min-width: @tablet-width) {
     width: 248px;
+    margin-top: auto;
   }
 
   @media (min-width: @tablet-width) {
@@ -177,16 +178,15 @@
     align-items: center;
 
     width: 324px;
-    height: 429px;
+    min-height: 429px;
     box-sizing: border-box;
-    margin-top: auto;
+    margin-top: 81px;
     padding: 161px 37px 38px 38px;
     border: 2px solid @products-others-border;
   }
 
   @media (min-width: @desktop-width) {
     width: 245px;
-    height: 429px;
     padding-bottom: 41px;
   }
 }
@@ -247,7 +247,7 @@
     font-size: 16px;
     line-height: 18px;
     width: 165px;
-    padding-bottom: 0;
+    padding-bottom: 33px;
   }
 }
 
@@ -258,7 +258,7 @@
   line-height: 20px;
 
   width: 100%;
-  padding: 10px 0 10px 0;
+  padding: 10px 5px 10px 0;
   border: none;
   text-transform: uppercase;
 
