--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,7 @@
 @import "utils/colors.less";
 @import "utils/global.less";
 @import "utils/mixins.less";
+@import "blocks/main-container.less";
 @import "blocks/main-header.less";
 @import "blocks/promo.less";
 @import "blocks/catalog.less";
