--- a/source/less/utils/colors.less
+++ b/source/less/utils/colors.less
@@ -10,6 +10,7 @@
 @bg-color-main: #f2f2f2;
 @bg-color-submain: #eaeaea;
 @bg-color-arrow: #000000;
+@bg-image-color: rgba(104, 183, 56, 0.85);
 
 @bg-job-color: #68b738;
 
