--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+  z-index: -1;
 
   background-image: url("../img/index/cat-bg-mobile.jpg");
   background-size: 320px auto;
@@ -21,13 +23,25 @@
   }
 
   @media (min-width: @desktop-width) {
-    min-height: 584px;
-    padding: 110px 110px 0;
+    min-height: 553px;
+    padding: 29px 110px 0;
     align-items: flex-start;
+  }
+}
 
-    background-image: url("../img/index/cat-bg-desktop.jpg");
-    background-size: 720px 694px;
-    background-position: top right;
+.promo::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: auto;
+
+  width: 320px;
+  height: 302px;
+  background-color: @bg-image-color;
+  z-index: -1;
+
+  @media (min-width: @tablet-width) {
+    display: none;
   }
 }
 
@@ -36,7 +50,7 @@
   font-size: 36px;
   line-height: 36px;
 
-  width: 416px;
+  width: 250px;
   margin: 0;
   padding-bottom: 25px;
   text-align: center;
@@ -45,15 +59,16 @@
   @media (min-width: @tablet-width) {
     font-size: 60px;
     line-height: 60px;
+    color: @text-color_main;
+
+    width: 416px;
+    padding-left: calc(118px - 30px);
     align-self: flex-start;
     text-align: start;
-    padding-left: calc(118px - 30px);
-    color: @text-color_main;
   }
 
   @media (min-width: @desktop-width) {
-    width: 416px;
-    padding: 111px 0 0 80px;
+    padding: 82px 0 0 80px;
   }
 }
 
@@ -101,7 +116,7 @@
     width: 552px;
     height: 499px;
     position: absolute;
-    top: 144px;
+    top: 29px;
     right: 330px;
   }
 }
@@ -112,7 +127,7 @@
   box-sizing: border-box;
   width: 100%;
   min-height: 40px;
-  padding: 7px 0;
+  padding: 7px 44px;
   border: none;
   text-transform: uppercase;
   text-decoration: none;
@@ -128,7 +143,7 @@
 
     width: 244px;
     min-height: 54px;
-    padding: 14px 0;
+    padding: 14px 26px;
     position: absolute;
     left: 121px;
     bottom: 526px;
