--- a/source/less/blocks/stats.less
+++ b/source/less/blocks/stats.less
@@ -61,9 +61,8 @@
 
   box-sizing: border-box;
   width: 124px;
-  height: 56px;
   margin: 0;
-  padding: 14px 0 18px 0;
+  padding: 14px 5px 18px 5px;
   text-align: center;
   border: 1px solid @stats-border-color;
   border-radius: 3px;
@@ -72,7 +71,7 @@
     font-size: 30px;
     line-height: 37px;
     width: 162px;
-    height: 72px;
+    min-height: 72px;
   }
 }
 
