--- a/source/less/utils/global.less
+++ b/source/less/utils/global.less
@@ -28,12 +28,18 @@
 @tablet-width: 769px;
 @desktop-width: 1440px;
 
+.page {
+  height: 100%;
+}
+
 .page__body {
   .font-main;
   font-size: 14px;
   line-height: 18px;
   margin: 0 auto;
   height: 100%;
+  display: flex;
+  flex-direction: column;
 
   @media (min-width: @desktop-width) {
     width: 1440px;
