--- a/source/less/blocks/adress.less
+++ b/source/less/blocks/adress.less
@@ -14,8 +14,9 @@
     width: 565px;
     padding: 56px 60px 56px 80px;
     position: absolute;
-    top: 95px;
+    top: 50%;
     left: 110px;
+    transform: translateY(-50%);
     background-color: @button-text-color;
   }
 }
