--- a/source/less/blocks/cat-info.less
+++ b/source/less/blocks/cat-info.less
@@ -39,6 +39,7 @@
 }
 
 .cat-info__input {
+  .input-border-effects();
   .font-submain;
   font-size: 16px;
   line-height: 16px;
@@ -48,6 +49,7 @@
   flex-grow: 1;
   box-sizing: border-box;
   height: 45px;
+  width: 10%;
   padding: 0 20px;
   margin: 0;
   border: 1px solid @form-border-color;
