--- a/source/less/blocks/products.less
+++ b/source/less/blocks/products.less
@@ -149,6 +149,7 @@
 .products__button {
   .font-submain;
   .button-color;
+  .button-effects-1();
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
@@ -254,6 +255,7 @@
 .products__button-others {
   .font-submain;
   .button-color;
+  .button-effects-2();
   font-size: 16px;
   line-height: 20px;
 
