--- a/source/less/utils/colors.less
+++ b/source/less/utils/colors.less
@@ -52,3 +52,6 @@
 @form-title-line-color: #68b738;
 
 @adress-call-text-color: #111111;
+
+@social-button-default-color: #666666;
+@social-button-hover-color: #68b738;
