--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -14,6 +14,7 @@
     padding: 69px 110px 75px;
     flex-direction: row;
     justify-content: space-between;
+    background-image: linear-gradient(to bottom, #ffffff 205px, @bg-color-submain 205px);
   }
 }
 
