--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -4,7 +4,6 @@
   flex-direction: column;
   align-items: center;
   position: relative;
-  z-index: -1;
 
   background-image: url("../img/index/cat-bg-mobile.jpg");
   background-size: 320px auto;
@@ -124,6 +123,7 @@
 .promo__button {
   .font-submain;
   .button-color;
+  .button-effects-1();
   box-sizing: border-box;
   width: 100%;
   min-height: 40px;
