--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -33,35 +33,29 @@
   display: inline-block;
 }
 
-.social__link--vk {
-  content: "";
+.social__link {
   display: block;
   width: 28px;
   height: 22px;
-  background-image: url("../img/social/vk.svg");
-  background-size: 28px 17px;
-  background-repeat: no-repeat;
-  background-position: center;
+}
+
+.social__link--vk {
+  .social-image-mask-setting();
+  mask: url("../img/social/vk.svg");
+  mask-position: center;
+  mask-repeat: no-repeat;
 }
 
 .social__link--youtube {
-  content: "";
-  display: block;
-  width: 28px;
-  height: 22px;
-  background-image: url("../img/social/youtube.svg");
-  background-size: 28px 17px;
-  background-repeat: no-repeat;
-  background-position: center;
+  .social-image-mask-setting();
+  mask: url("../img/social/youtube.svg");
+  mask-position: center;
+  mask-repeat: no-repeat;
 }
 
 .social__link--telegram {
-  content: "";
-  display: block;
-  width: 28px;
-  height: 22px;
-  background-image: url("../img/social/telegram.svg");
-  background-size: 28px 17px;
-  background-repeat: no-repeat;
-  background-position: center;
+  .social-image-mask-setting();
+  mask: url("../img/social/telegram.svg");
+  mask-position: center;
+  mask-repeat: no-repeat;
 }
