--- a/source/less/blocks/target.less
+++ b/source/less/blocks/target.less
@@ -48,6 +48,14 @@
     min-height: 40px;
     padding-left: 60px;
   }
+
+  &:hover .target__input-mark {
+    border-color: #bababa;
+  }
+
+  &:has(.target__input:disabled) {
+    opacity: 0.3;
+  }
 }
 
 .target__input-mark {
@@ -71,8 +79,9 @@
 .target__input[type="radio"]:checked + .target__input-mark::after {
   content: "";
   position: absolute;
-  top: 8px;
-  left: 8px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
   width: 13px;
   height: 13px;
@@ -80,9 +89,6 @@
   background-color: @radio-checked-color;
 
   @media (min-width: @tablet-width) {
-    top: 10.5px;
-    left: 10.5px;
-
     width: 18px;
     height: 18px;
   }
