--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -16,6 +16,7 @@
   }
 
   @media (min-width: @tablet-width) {
+    min-height: 794px;
     padding: 64px 30px 0;
     position: relative;
     background-image: none;
@@ -76,7 +77,6 @@
   line-height: 14px;
   margin: 0;
   padding-bottom: 29px;
-  text-align: center;
   text-transform: uppercase;
   color: @text-bg-color;
 
@@ -100,23 +100,46 @@
   }
 }
 
+
+.promo__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+
+  @media (min-width: @tablet-width) {
+    position: relative;
+    min-height: 609px;
+    align-items: flex-start;
+  }
+
+  @media (min-width: @desktop-width) {
+    min-height: auto;
+    position: static;
+  }
+}
+
 .promo__image {
   display: block;
-  align-self: center;
   padding-bottom: 3px;
 
   @media (min-width: @tablet-width) {
     padding: 0;
     width: 709px;
     height: 609px;
+    position: absolute;
+    top: 0;
+    right: 50%;
+    transform: translateX(50%);
+    z-index: -1;
   }
 
   @media (min-width: @desktop-width) {
     width: 552px;
     height: 499px;
-    position: absolute;
     top: 29px;
     right: 330px;
+    transform: none;
   }
 }
 
@@ -144,16 +167,11 @@
     width: 244px;
     min-height: 54px;
     padding: 14px 26px;
-    position: absolute;
-    left: 121px;
-    bottom: 526px;
+    margin: 29px 0 0 91px;
   }
 
   @media (min-width: @desktop-width) {
     position: static;
-  }
-
-  @media (min-width: @desktop-width) {
     margin: 52px 0 0 80px;
   }
 }
