--- a/source/less/blocks/adress.less
+++ b/source/less/blocks/adress.less
@@ -12,6 +12,7 @@
   @media (min-width: @desktop-width) {
     box-sizing: border-box;
     width: 565px;
+    max-height: 300px;
     padding: 56px 60px 56px 80px;
     position: absolute;
     top: 50%;
