--- a/source/less/blocks/copiright.less
+++ b/source/less/blocks/copiright.less
@@ -12,7 +12,8 @@
   text-decoration: none;
   color: @text-color-submain;
 
-  display: flex;
+  display: grid;
+  grid-template-columns: 113px 27px;
   justify-content: space-between;
   align-items: center;
 
