--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,25 +1,14 @@
 .promo {
   padding: 27px 20px 0;
+  position: relative;
+
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
-
-  background-image: url("../img/index/cat-bg-mobile.jpg");
-  background-size: 320px auto;
-  background-repeat: no-repeat;
-  background-position: top;
-
-  @media (min-resolution: 2dppx) {
-    background-image: url("../img/index/cat-bg-mobile@2x.jpg");
-    background-size: 320px auto;
-  }
 
   @media (min-width: @tablet-width) {
     min-height: 794px;
     padding: 64px 30px 0;
-    position: relative;
-    background-image: none;
   }
 
   @media (min-width: @desktop-width) {
@@ -29,11 +18,50 @@
   }
 }
 
+.promo::before {
+  content: "";
+  position: absolute;
+  top: 0;
+
+  width: 320px;
+  height: 302px;
+  background-image: url("../img/index/cat-bg-mobile.jpg");
+  background-size: 320px auto;
+  background-repeat: no-repeat;
+  background-position: top;
+  z-index: -1;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/index/cat-bg-mobile@2x.jpg");
+    background-size: 320px auto;
+  }
+
+  @media (min-width: @tablet-width) {
+    background-image: none;
+  }
+
+  @media (min-width: @desktop-width) {
+    top: -112px;
+    right: 0;
+
+    width: 720px;
+    height: 694px;
+    background-image: url("../img/index/cat-bg-desktop.jpg");
+    background-size: 720px 694px;
+    background-position: top right;
+    z-index: -2;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/index/cat-bg-desktop@2x.jpg");
+      background-size: 720px 694px;
+    }
+  }
+}
+
 .promo::after {
   content: "";
   position: absolute;
   top: 0;
-  left: auto;
 
   width: 320px;
   height: 302px;
@@ -41,7 +69,17 @@
   z-index: -1;
 
   @media (min-width: @tablet-width) {
-    display: none;
+    background-color: inherit;
+  }
+
+  @media (min-width: @desktop-width) {
+    top: -112px;
+    right: 0;
+
+    background-color: @bg-image-color;
+    width: 720px;
+    height: 694px;
+    z-index: -2;
   }
 }
 
