--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -8,6 +8,7 @@
   justify-content: center;
 
   @media (min-width: @tablet-width) {
+    margin-left: 26px;
     padding: 0;
     border: none;
   }
