--- a/source/less/utils/colors.less
+++ b/source/less/utils/colors.less
@@ -50,6 +50,10 @@
 @checkbox-border-color: #cdcdcd;
 @radio-checked-color: #68b738;
 @form-title-line-color: #68b738;
+@form-svg-static-color: #000000;
+@form-svg-focus-color: #68b738;
+@form-svg-invalid-color: #ff8282;
+
 
 @adress-call-text-color: #111111;
 
