--- a/source/less/blocks/bottom.less
+++ b/source/less/blocks/bottom.less
@@ -13,7 +13,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 66px 110px;
+    padding: 68px 110px;
   }
 }
 
@@ -31,4 +31,8 @@
 
 .bottom__link-img {
   height: 24px;
+
+  @media (min-width: @tablet-width) {
+    height: 28px;
+  }
 }
