--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -30,7 +30,7 @@
 
 .catalog__item {
   box-sizing: border-box;
-  padding: 30px 33px 18px 20px;
+  padding: 30px 20px 18px;
   background-color: @bg-color-main;
   position: relative;
 
@@ -141,6 +141,7 @@
   line-height: 37px;
   margin: 0;
   padding: 0 0 29px 71px;
+  text-transform: uppercase;
 
   @media (min-width: @tablet-width) {
     font-size: 36px;
@@ -155,7 +156,7 @@
 
 .catalog__description {
   margin: 0;
-  padding-bottom: 23px;
+  padding-bottom: 22px;
   border-bottom: 1px solid @social-line;
 
   @media (min-width: @tablet-width) {
@@ -222,7 +223,7 @@
   display: block;
   position: absolute;
   top: calc(50% - 1px);
-  right: 14px;
+  right: 16px;
 
   width: 18px;
   height: 2px;
@@ -234,7 +235,7 @@
   display: block;
   position: absolute;
   top: calc(50% - 4px);
-  right: 9px;
+  right: 11px;
 
   border-style: solid;
   border-width: 4.5px 0 4.5px 6px;
