--- a/source/less/blocks/job.less
+++ b/source/less/blocks/job.less
@@ -2,7 +2,7 @@
   padding: 20px 21px 49px;
 
   @media (min-width: @tablet-width) {
-    padding: 25px 105px 47px 31px;
+    padding: 45px 105px 47px 31px;
     border-bottom: 1px solid @menu-line;
   }
 
@@ -53,10 +53,13 @@
   position: relative;
   color: @text-color-submain;
 
+  display: flex;
+  align-items: center;
+
   @media (min-width: @tablet-width) {
     min-height: 280px;
     padding: 0;
-    padding-top: 151px;
+    padding-top: 93px;
     font-size: 16px;
     line-height: 24px;
   }
