--- a/source/less/utils/mixins.less
+++ b/source/less/utils/mixins.less
@@ -58,6 +58,9 @@
   @media (min-width: @tablet-width) {
     left: 0;
     top: 40px;
+
+    width: 80px;
+    height: 80px;
   }
 }
 
@@ -71,7 +74,7 @@
   position: absolute;
   z-index: -1;
   top: 0;
-  right: 0;
+  right: 5px;
   color: #f2f2f2;
 }
 
@@ -97,7 +100,7 @@
     border: 2px solid #444444;
   }
 
-  &:invalid {
+  &:invalid:not(:placeholder-shown) {
     border-color: #ff8282;
   }
 }
