--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -2,7 +2,7 @@
   @media (min-width: @desktop-width) {
     display: flex;
     gap: 80px;
-    padding: 0 112px 69px 111px;
+    padding: 0 112px 67px 111px;
   }
 }
 
@@ -22,15 +22,16 @@
   padding: 7px 15px;
 
   @media (min-width: @tablet-width) {
+    font-size: 20px;
+
     width: 282px;
     min-height: 52px;
-
-    margin: 0 65px 72px 71px;
+    margin: 0 61px 72px 71px;
     padding: 13px 45px;
   }
 
   @media (min-width: @desktop-width) {
-    margin: 0 84px 82px 111px;
+    margin: 0 84px 80px 111px;
     width: 568px;
   }
 }
@@ -43,6 +44,7 @@
   padding: 0 20px 32px 20px;
 
   @media (min-width: @tablet-width) {
+    font-size: 16px;
     display: inline-flex;
 
     min-width: 282px;
