--- a/source/less/blocks/programm-selection.less
+++ b/source/less/blocks/programm-selection.less
@@ -43,7 +43,7 @@
     padding: 0 0 66px 70px;
   }
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @desktop-width) {
     padding: 0 0 66px 110px;
   }
 }
