--- a/source/less/blocks/products.less
+++ b/source/less/blocks/products.less
@@ -29,7 +29,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 60px;
-    padding: 0 31px 68px 30px;
+    padding: 0 31px 70px 30px;
   }
 
   @media (min-width: @desktop-width) {
@@ -44,7 +44,7 @@
   grid-template-columns: 1fr 1fr;
   row-gap: 13px;
 
-  padding: 20px 20px 23px;
+  padding: 21px 20px 22px;
   border-bottom: 1px solid @products-line-color;
 
   @media (min-width: @tablet-width) {
@@ -55,7 +55,7 @@
 
     box-sizing: border-box;
     width: 324px;
-    padding: 8px 36px 39px;
+    padding: 8px 37px 39px 39px;
     border: none;
     background: linear-gradient(to bottom, #ffffff 81px, @bg-color-main 81px);
   }
@@ -68,11 +68,13 @@
 
 .products__img-wrapper {
   justify-self: center;
-  align-self: center;
+  align-self: flex-end;
+  padding-bottom: 1px;
 
   @media (min-width: @tablet-width) {
     display: flex;
     justify-content: center;
+    align-self: center;
     align-items: flex-end;
 
     width: 168px;
@@ -87,27 +89,21 @@
   }
 }
 
-.products__img {
-  display: block;
-}
+.products__item:nth-child(odd) .products__img-wrapper {
+  padding-bottom: 7px;
 
-.products__item .products__img-wrapper .products__img {
   @media (min-width: @tablet-width) {
-    width: 161px;
-    height: 172px;
-  }
-}
-
-.products__item:nth-child(even) .products__img-wrapper .products__img {
-  @media (min-width: @tablet-width) {
-    width: 168px;
-    height: 206px;
+    padding-bottom: 34px;
   }
 
   @media (min-width: @desktop-width) {
-    width: 172px;
-    height: 196px;
+    padding-top: 4px;
+    padding-bottom: 42px;
   }
+}
+
+.products__img {
+  display: block;
 }
 
 .products__item-wrapper {
@@ -118,7 +114,7 @@
     flex-direction: column;
 
     width: 100%;
-    padding-bottom: 33px;
+    padding-bottom: 35px;
   }
 }
 
@@ -128,7 +124,7 @@
   line-height: 20px;
   width: 90px;
   margin: 0;
-  padding-bottom: 18px;
+  padding-bottom: 14px;
   text-transform: uppercase;
   color: @products-name-color;
 
@@ -136,7 +132,7 @@
     font-size: 20px;
     line-height: 24px;
     width: 155px;
-    padding-bottom: 14px;
+    padding-bottom: 13px;
     align-self: center;
     text-align: center;
   }
@@ -159,17 +155,17 @@
   padding: 10px 5px;
 
   @media (min-width: @tablet-width) {
-    width: 248px;
+    width: 100%;
     margin-top: auto;
   }
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @desktop-width) {
     width: 168px;
   }
 }
 
 .products__others {
-  padding: 78px 20px 25px 21px;
+  padding: 80px 20px 25px 21px;
   border-bottom: 1px solid @products-line-color;
   position: relative;
 
@@ -182,13 +178,13 @@
     min-height: 429px;
     box-sizing: border-box;
     margin-top: 81px;
-    padding: 161px 37px 38px 38px;
+    padding: 161px 37px 33px 38px;
     border: 2px solid @products-others-border;
   }
 
   @media (min-width: @desktop-width) {
     width: 245px;
-    padding-bottom: 41px;
+    padding: 159px 37px 41px 38px;
   }
 }
 
