--- a/source/less/blocks/cat.less
+++ b/source/less/blocks/cat.less
@@ -46,7 +46,7 @@
   }
 }
 
-.cat__slider-arrow {
+.cat__slider-button {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -60,8 +60,8 @@
   background-color: #ffffff;
 }
 
-.cat__slider-arrow::before,
-.cat__slider-arrow::after {
+.cat__slider-button::before,
+.cat__slider-button::after {
   content: "";
   position: absolute;
   top: 25%;
@@ -72,7 +72,7 @@
   border-color: transparent transparent transparent #666666;
 }
 
-.cat__slider-arrow::after {
+.cat__slider-button::after {
   transform: rotate(180deg);
 
   top: 25%;
