--- a/source/less/utils/colors.less
+++ b/source/less/utils/colors.less
@@ -59,3 +59,7 @@
 
 @social-button-default-color: #666666;
 @social-button-hover-color: #68b738;
+
+@logo-text-color: #111111;
+@logo-text-hover-color: #3e3e3e;
+@logo-text-active-color: #6b6b6b;
