--- a/source/less/blocks/cat.less
+++ b/source/less/blocks/cat.less
@@ -67,6 +67,8 @@
   border: 2px solid #666666;
   border-radius: 50%;
   background-color: #ffffff;
+
+  cursor: col-resize;
 }
 
 .cat__slider-button::before,
