--- a/source/less/blocks/gift.less
+++ b/source/less/blocks/gift.less
@@ -1,21 +1,21 @@
 .gift {
   width: 279px;
   margin: 35px auto 0;
-  background-image: url("../../img/catalog/gift-cat-mobile.jpg");
+  background-image: url("/img/catalog/gift-cat-mobile.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 
   @media (min-resolution: 2dppx) {
-    background-image: url("../../img/catalog/gift-cat-mobile@2x.jpg");
+    background-image: url("/img/catalog/gift-cat-mobile@2x.jpg");
   }
 
   @media (min-width: @tablet-width) {
     width: 707px;
     margin: 69px auto 0;
-    background-image: url("../../img/catalog/gift-cat-tablet.jpg");
+    background-image: url("/img/catalog/gift-cat-tablet.jpg");
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../../img/catalog/gift-cat-tablet@2x.jpg");
+      background-image: url("/img/catalog/gift-cat-tablet@2x.jpg");
     }
   }
 
@@ -23,10 +23,10 @@
     width: 245px;
     margin: 0;
 
-    background-image: url("../../img/catalog/gift-cat-desktop.jpg");
+    background-image: url("/img/catalog/gift-cat-desktop.jpg");
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../../img/catalog/gift-cat-desktop@2x.jpg");
+      background-image: url("/img/catalog/gift-cat-desktop@2x.jpg");
     }
   }
 }
@@ -62,7 +62,7 @@
 
   width: 78px;
   height: 80px;
-  background-image: url("../../img/catalog/gift-icon.svg");
+  background-image: url("/img/catalog/gift-icon.svg");
 
   @media (min-width: @tablet-width) {
     top: calc(50% - 40px);
