--- a/source/less/blocks/cat.less
+++ b/source/less/blocks/cat.less
@@ -44,7 +44,7 @@
   border-radius: 2px;
   background-color: #666666;
   z-index: 1;
-  cursor: pointer;
+  cursor: col-resize;
 
   position: absolute;
   left: 50%;
@@ -67,7 +67,6 @@
   border: 2px solid #666666;
   border-radius: 50%;
   background-color: #ffffff;
-
   cursor: col-resize;
 }
 
