--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -5,6 +5,10 @@
   @media (min-width: @tablet-width) {
     height: 400px;
   }
+
+  @media (min-width: @tablet-width) {
+    height: 399px;
+  }
 }
 
 .map__frame {
