--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -76,7 +76,7 @@
   @media (min-width: @desktop-width) {
     max-width: 700px;
     width: fit-content;
-    padding: 0 35px 81px 0;
+    padding: 0 35px 79px 0;
     grid-column: 1/3;
   }
 }
@@ -127,7 +127,8 @@
   @media (min-width: @tablet-width) {
     display: flex;
     justify-content: flex-end;
-    margin-bottom: 25px;
+    margin-bottom: 22px;
+    align-items: baseline;
   }
 
   @media (min-width: @desktop-width) {
