Правки кроме размера вьюпорта

--- a/source/less/blocks/additional.less
+++ b/source/less/blocks/additional.less
@@ -152,7 +152,7 @@
 }
 
 /*Checkbox*/
-.control-mark-check {
+.additional__control-mark-check {
   content: "";
   position: absolute;
   top: 0;
@@ -169,7 +169,7 @@
   }
 }
 
-.additional__input[type="checkbox"]:checked + .control-mark-check::after {
+.additional__input[type="checkbox"]:checked + .additional__control-mark-check::after {
   content: "";
   position: absolute;
   top: 50%;
@@ -188,6 +188,6 @@
   }
 }
 
-.additional__input:focus + .control-mark-check {
+.additional__input:focus + .additional__control-mark-check {
   outline: 2px solid #000000;
 }
