--- a/source/less/blocks/job.less
+++ b/source/less/blocks/job.less
@@ -110,8 +110,12 @@
 .job__step-one::after {
   @media (min-width: @tablet-width) {
     .job-number();
-    right: 22px;
+    right: 3px;
     content: "1";
+  }
+
+  @media (min-width: @desktop-width) {
+    right: 22px;
   }
 }
 
