--- a/source/less/blocks/gift.less
+++ b/source/less/blocks/gift.less
@@ -1,18 +1,29 @@
 .gift {
-  width: 279px;
+  position: relative;
+  min-width: 279px;
+  height: 290px;
   margin: 35px auto 0;
   background-image: url("/img/catalog/gift-cat-mobile.jpg");
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 
   @media (min-resolution: 2dppx) {
     background-image: url("/img/catalog/gift-cat-mobile@2x.jpg");
   }
 
   @media (min-width: @tablet-width) {
-    width: 707px;
+    min-width: 707px;
+    height: 200px;
     margin: 69px auto 0;
     background-image: url("/img/catalog/gift-cat-tablet.jpg");
+
+    align-items: center;
+    justify-content: flex-end;
 
     @media (min-resolution: 2dppx) {
       background-image: url("/img/catalog/gift-cat-tablet@2x.jpg");
@@ -20,10 +31,14 @@
   }
 
   @media (min-width: @desktop-width) {
+    min-width: 0;
     width: 245px;
+    height: 100%;
     margin: 0;
-
     background-image: url("/img/catalog/gift-cat-desktop.jpg");
+
+    align-items: flex-end;
+    justify-content: center;
 
     @media (min-resolution: 2dppx) {
       background-image: url("/img/catalog/gift-cat-desktop@2x.jpg");
@@ -31,46 +46,66 @@
   }
 }
 
-.gift-text {
-  font-size: 16px;
-  line-height: 20px;
-  text-align: center;
+.gift::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
 
-  width: 161px;
-  margin: 0;
-  padding: 186px 61px 43px 57px;
-  color: @gift-text-color;
+  width: 100%;
+  height: 100%;
   background-color: @bg-image-color;
-  position: relative;
-
-  @media (min-width: @tablet-width) {
-    text-align: left;
-    padding: 71px 124px 69px 422px;
-  }
-
-  @media (min-width: @desktop-width) {
-    text-align: center;
-    padding: 184px 43px 45px 41px;
-  }
 }
 
-.gift-text::before {
+.gift::after {
   content: "";
   position: absolute;
   top: 59px;
-  left: calc(50% - 0.5 * 78px);
+  left: 50%;
+  transform: translateX(-50%);
 
   width: 78px;
   height: 80px;
   background-image: url("/img/catalog/gift-icon.svg");
 
   @media (min-width: @tablet-width) {
-    top: calc(50% - 40px);
+    top: 57px;
     left: 77px;
+    transform: none;
+
+    width: 80px;
+    height: 82px;
   }
 
   @media (min-width: @desktop-width) {
     top: 56px;
-    left: 84px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+.gift-text {
+  font-size: 16px;
+  line-height: 20px;
+
+  text-align: center;
+  padding: 0 58px 43px 61px;
+
+  min-width: 161px;
+  margin: 0;
+  color: @gift-text-color;
+  z-index: 1;
+
+  @media (min-width: @tablet-width) {
+    max-width: 161px;
+    text-align: left;
+    padding: 0;
+    padding-right: 124px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0;
+    padding-bottom: 42px;
+    text-align: center;
   }
 }
