--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -54,6 +54,7 @@
   margin-right: 7px;
 }
 
+/*Начало бургер-меню*/
 .main-header__burger {
   width: 24px;
   height: 18.5px;
@@ -96,6 +97,9 @@
 .main-header__nav--opened .main-header__burger::after {
   transform: rotate(-45deg);
 }
+
+
+/*Конец бургер-меню*/
 
 .main-header__list {
   min-width: 100%;
@@ -255,24 +259,34 @@
     }
   }
 
-  .main-header--nojs {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    row-gap: 10px;
-    justify-items: center;
+  .main-header__nav--nojs .main-header__list {
+    position: inherit;
+    display: block;
   }
 
-  .main-header--nojs .main-header__nav--nojs {
-    grid-column: 1/3;
+  .main-header--nojs {
+    background-color: #ffffff;
+    padding: 0;
+    display: grid;
+    grid-template-columns: 33px 101px 65px;
+    grid-template-rows: 65px auto;
+  }
+
+  .main-header--nojs .main-header__logo-link {
+    margin-left: 20px;
+  }
+
+  .main-header--nojs .main-header__text-logo {
+    margin-left: 17px;
   }
 
   .main-header__nav--nojs .main-header__burger {
     display: none;
   }
 
-  .main-header__nav--nojs .main-header__list {
-    position: static;
-    display: block;
+  .main-header__nav--nojs {
+    grid-column: 1/4;
+    grid-row: 2/3;
   }
 }
 
