--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -15,3 +15,23 @@
   width: 100%;
   height: 100%;
 }
+
+.map__img {
+  display: block;
+  width: 100%;
+  object-fit: cover;
+}
+
+/*Без JS*/
+
+.map__wrapper {
+  display: none;
+}
+
+.map--no-js .map__wrapper {
+  display: block;
+}
+
+.map--no-js .map__frame {
+  display: none;
+}
