--- a/source/less/utils/global.less
+++ b/source/less/utils/global.less
@@ -25,7 +25,8 @@
   font-display: swap;
 }
 
-@tablet-width: 769px;
+@mobile-width-only: 767px;
+@tablet-width: 768px;
 @desktop-width: 1440px;
 
 .page {
