--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -101,10 +101,10 @@
 @media (max-width: @mobile-width-only) {
   .main-header__nav--closed .main-header__list {
     display: none;
+  }
 
-    &--opened {
-      display: block;
-    }
+  .main-header__nav--opened .main-header__list{
+    display: block;
   }
 }
 /*Конец бургер-меню*/
